apps/cobalt/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cobalt
  namespace: cobalt
  annotations:
    operator.1password.io/auto-restart: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cobalt
  template:
    metadata:
      labels:
        app: cobalt
    spec:
      containers:
        - name: cobalt
          image: ghcr.io/imputnet/cobalt:staging
          ports:
            - containerPort: 9000
