apps/cobalt/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt
  namespace: cobalt
spec:
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: cobalt
