apps/cobalt/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cobalt
  namespace: cobalt
  annotations:
    cert-manager.io/cluster-issuer: stepca-issuer
spec:
  rules:
    - host: cobalt.on.lu.mi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cobalt
                port:
                  number: 80
  tls:
    - hosts:
        - cobalt.on.lu.mi
      secretName: cert-cobalt-ingress
